--- a/roledoViny/Form2.resx
+++ b/roledoViny/Form2.resx
@@ -117,8 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="3f1ca3_9c874a8b810f4cb9a256fc9f62a9bc8b_mv2_d_2560_1440_s_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3f1ca3_9c874a8b810f4cb9a256fc9f62a9bc8b_mv2_d_2560_1440_s_2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
+  <metadata name="setdate.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
